# ffmpeg-android-cmake

./: CMakeLists.txt  README.md  build.gradle
src/androidTest/java/com/tuskantech/talkboy/: ExampleInstrumentedTest.java
src/main/cpp/: native-lib.c  native-lib.h
src/main/cpp/ffmpeg/arm64-v8a/: config.h
src/main/cpp/ffmpeg/armeabi-v7a/: config.h
src/main/cpp/ffmpeg/build_noConfig/: Logger.h  build_android_all.sh  build_android_arm64_v8a.sh  build_android_armeabi_v7a.sh  build_android_x86.sh  build_android_x86_64.sh  cmdutils.c  cmdutils.d  cmdutils.h  cmdutils_opencl.c  config.asm  config.fate  config.mak  conflog.txt  ffmpeg  ffmpeg.c  ffmpeg.d  ffmpeg.h  ffmpeg_cuvid.c  ffmpeg_dxva2.c  ffmpeg_filter.c  ffmpeg_filter.d  ffmpeg_g  ffmpeg_opt.c  ffmpeg_opt.d  ffmpeg_qsv.c  ffmpeg_vaapi.c  ffmpeg_vdpau.c  ffmpeg_videotoolbox.c  ffplay.c  ffprobe  ffprobe.c  ffprobe.d  ffprobe_g  ffserver  ffserver.c  ffserver.d  ffserver_config.c  ffserver_config.d  ffserver_config.h  (+1 more)
src/main/cpp/ffmpeg/build_noConfig/doc/: config.texi
src/main/cpp/ffmpeg/build_noConfig/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aacadtsdec.d  aaccoder.d  aacdec.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_fixed.d  aacps_float.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aactab.d  aasc.d  ac3.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  ac3tab.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  adpcmenc.d  (+620 more)
src/main/cpp/ffmpeg/build_noConfig/libavcodec/arm/: hevcdsp_init_arm.d  hevcdsp_init_neon.d
src/main/cpp/ffmpeg/build_noConfig/libavcodec/x86/: hevcdsp_init.d
src/main/cpp/ffmpeg/build_noConfig/libavdevice/: alldevices.d  avdevice.d  dv1394.d  fbdev_common.d  fbdev_dec.d  fbdev_enc.d  lavfi.d  libavdevice.pc  timefilter.d  utils.d  v4l2-common.d  v4l2.d  v4l2enc.d
src/main/cpp/ffmpeg/build_noConfig/libavfilter/: aeval.d  af_acrusher.d  af_adelay.d  af_aecho.d  af_aemphasis.d  af_afade.d  af_afftfilt.d  af_aformat.d  af_agate.d  af_alimiter.d  af_amerge.d  af_amix.d  af_anequalizer.d  af_anull.d  af_apad.d  af_aphaser.d  af_apulsator.d  af_aresample.d  af_asetnsamples.d  af_asetrate.d  af_ashowinfo.d  af_astats.d  af_atempo.d  af_biquads.d  af_channelmap.d  af_channelsplit.d  af_chorus.d  af_compand.d  af_compensationdelay.d  af_crystalizer.d  af_dcshift.d  af_dynaudnorm.d  af_earwax.d  af_extrastereo.d  af_firequalizer.d  af_flanger.d  af_hdcd.d  af_join.d  af_pan.d  af_replaygain.d  (+212 more)
src/main/cpp/ffmpeg/build_noConfig/libavformat/: 3dostr.d  4xm.d  a64.d  aacdec.d  aadec.d  ac3dec.d  acm.d  act.d  adp.d  ads.d  adtsenc.d  adxdec.d  aea.d  afc.d  aiffdec.d  aiffenc.d  aixdec.d  allformats.d  amr.d  anm.d  apc.d  ape.d  apetag.d  apngdec.d  apngenc.d  aqtitledec.d  asf.d  asfdec_f.d  asfdec_o.d  asfenc.d  assdec.d  assenc.d  ast.d  astdec.d  astenc.d  async.d  au.d  audiointerleave.d  avc.d  avidec.d  (+380 more)
src/main/cpp/ffmpeg/build_noConfig/libavutil/: buffer.d  cpu.d  crc.d  eval.d  file_open.d  fixed_dsp.d  frame.d  hash.d  imgutils.d  lfg.d  log.c  log.d  threadmessage.d
src/main/cpp/ffmpeg/build_noConfig/libpostproc/: libpostproc.pc
src/main/cpp/ffmpeg/build_noConfig/libswscale/: alphablend.d  gamma.d  hscale.d  hscale_fast_bilinear.d  input.d  options.d  output.d  rgb2rgb.d  slice.d  swscale.d  swscale_unscaled.d  utils.d  vscale.d  yuv2rgb.d
src/main/cpp/ffmpeg/x86/: config.h
src/main/cpp/ffmpeg/x86_64/: config.h
src/main/cpp/x264_shells/: build_android_arm.sh  build_android_arm64-v8a.sh  build_android_mips.sh  build_android_mips64.sh  build_android_x86.sh  build_android_x86_64.sh
src/main/java/com/tuskantech/talkboy/share/: VideoCreator.java
src/test/java/com/tuskantech/talkboy/: ExampleUnitTest.java
